################################################################################
cmake_minimum_required (VERSION 3.13)
################################################################################

################################################################################
# Project name
################################################################################

project ("SSHTools")

################################################################################

################################################################################

add_subdirectory ("Base")
add_subdirectory ("Common")
add_subdirectory ("ConfiParse")

################################################################################
